# psychosis-LLM-evaluation

./: .gitignore  README.md  main.py  pyproject.toml
code/: base-prompt-variations.ipynb  models-mental-health-cannot-help-list.ipynb  psychosis_scenarios_base.csv  scenario-base.ipynb
data/: README.md  prompts_with_variations.csv  psychosis_scenarios.csv  psychosis_scenarios_base.csv
data/cannot_help_list/: chatgpt.csv  claude.csv  deepseek.csv  llama.csv
notebooks/: README.md  base-prompt-variations.ipynb  holdout-human-inter-rater-reliability.ipynb  human-inter-rater-reliability.ipynb  neurips-workshop-statistics-and-visualizations.ipynb  neurips-workshop-statistics-visualizations-final.ipynb  scenario-base.ipynb
old_data/: README.md  prompts_with_variations.csv  psychosis_scenarios.csv  psychosis_scenarios_base.csv
pipeline/generate_scenarios/: generate_scenarios.py
pipeline/generate_stats/: generate_stats.py
pipeline/llm_as_judge/: llm_as_judge.py
pipeline/responses_to_scenarios/: model_response_to_scenarios_2025-08-06.csv  responses_to_scenarios.py
pipeline/src/data/: base_scenarios_manual_validation.csv  gemini_as_judge_explanations_2025-08-23-12-59-15.csv  holdout_interrater_reliability_kela.csv  holdout_sample_with_judge_2025-08-19-18-15-52.csv  holdout_sample_with_judge_explanations_2025-08-19-18-29-53.csv  holdout_sample_with_judge_yesno_2025-08-19-18-29-53.csv  holdout_samples_groundtruth_6criteria.csv  magistral_as_judge_binary_2025-08-23-13-07-35.csv  magistral_as_judge_explanations_2025-08-23-13-07-35.csv  psychosis_excerpts.csv  (+10 more)
(+16 files in other folders)
